# Fuel-Consumption-App

./: .gitignore  LICENSE  README.md  _🏠_main.py  environment.yml  prediction_model.pkl  pyproject.toml  requirements.txt  utils.py
.devcontainer/: devcontainer.json
data/: car_data.parquet  lasso_regression.pkl
pages/: 1_📈_dashboard.py  2_🚘_vehicle_finder.py  3_💯_your_car_consumption.py  4_model_training.ipynb  4_🧮_prediction_model.py  _📈_dashboard.py  _🚘_vehicle_finder.py  heavy_prediction_model.ipynb
prediction_model/: LassoPrediction.ipynb  XGBoost.ipynb  prediction_model.pkl
src/: model_training.ipynb  process_data.py  utils.py
