[project]
name = "fuel-consumption-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair~=5.0",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "streamlit-extras>=0.7.8",
]
