[project]
name = "fuel-consumption-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.0",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = ["ruff>=0.15.0"]

[tool.ruff]
fix = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pycodestyle]
max-line-length = 320

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "A",   # flake8-builtins
    "RET", # flake8-return
    "PT",  # flake8-pytest-style
    "N",   # pep8-naming
    "RUF", # Ruff-specific rules
    "S",   # flake8-bandit (security)
    "T20", # flake8-print (enforce logging in production pipelines)
    "PLC", # pylint convention
    "PLE", # pylint error
    "PD",  # pandas best practices
    "NPY", # numpy best practices
]
